Partial refactor of updater code and version API.
